BaseCaret functionality merged into EditorCaret. BaseCaret reverted into original state. Further fixes required.